Edit juan beresiarte's page

--- a/src/content/founder/juan_beresiarte.mdx
+++ b/src/content/founder/juan_beresiarte.mdx
@@ -2,75 +2,82 @@
 title: 'Juan Beresiarte Basiluk'
 description: 'Founder & Fullstack developer'
 pubDate: 'Nov 22 2024'
-heroImage: '/founders/carpincho.jpg'
+heroImage: '/founders/juan_beresiarte.jpeg'
 ---
 
-**Desarrollador FullStack**  
-**Ubicación:** General Alvear, Mendoza, Argentina  
-**Portafolio:** [beresiarte.vercel.app](https://beresiarte.vercel.app)  
+## Sobre mí  
+¡Hola! Soy Juan Beresiarte, desarrollador web, escritor y amante del mate 🧉❤️.  
+Actualmente estoy cursando una Tecnicatura en Programación en la Universidad Tecnologica Nacional y trabajo como freelance en distintos proyectos. También administro un blog donde escribo sobre temas de desarrollo.  
+
+**Frase favorita:**  
+*"Fallar es humano, rendirse triste"*  
+— Chuty (2017)
 
 ---
 
-## Experiencia  
-### **Programador Full Stack**  
-**Automóviles Atuel** (Contrato temporal)  
-- **Duración:** Septiembre 2024 - Actualidad (3 meses)  
+## Experiencia
+
+---
+
+##### Automóviles Atuel (Contrato temporal)
+- **Rol:** Desarrollador Full Stack  
+- **Duración:** Septiembre 2024 - Actualidad  
 - **Ubicación:** General Alvear, Mendoza, Argentina (Presencial)  
-- **Habilidades:** PHP, Bases de datos y más.  
+- **Habilidades utilizadas:** PHP, Bases de datos y más.  
 
-### **Freelance**  
-**Fiverr** (Profesional independiente)  
-- **Duración:** Septiembre 2023 - Marzo 2024 (7 meses)  
-- **Ubicación:** Remoto (Argentina)  
-- **Habilidades:** JavaScript, React y más.  
+##### Fiverr (Freelance)  
+- **Rol:** Desarrollador Full Stack  
+- **Duración:** Septiembre 2023 - Marzo 2024  
+- **Ubicación:** Remoto  
+- **Habilidades utilizadas:** JavaScript, React y más.
 
 ---
 
-## Educación  
-### **UTN Facultad Regional San Rafael**  
+## Educación
+
+---
+
+##### UTN Facultad Regional San Rafael  
 - **Programa:** Tecnicatura en Programación  
 - **Duración:** Marzo 2023 - Noviembre 2025  
 
-### **Secundaria San Antonio**  
-- **Título:** Educación Secundaria Obligatoria (ESO)  
+##### Secundaria San Antonio  
+- **Título:** Bachillerato en ciencias humanisticas
 - **Duración:** 2016 - 2021  
-- **Actividades:** Coro de misa (1 año).  
 
 ---
 
-## Certificaciones  
-- **Bases de datos NoSql con MongoDB y NodeJS** (MasterClass, Noviembre 2022)  
-  - **ID:** zxwl4mtddh  
-- **Git: ¡de Noob a Pro!** (MasterClass, Noviembre 2022)  
-  - **ID:** 032f2ea23a5d48eab7fc231f6078358f  
+## Proyectos destacados
 
 ---
 
-## Proyectos  
-### **Typing Check**  
-- **Duración:** Marzo 2023 - Actualidad  
-- **Descripción:** Un test de mecanografía desarrollado en React.  
-- **Tecnologías:** JavaScript, CSS y más.  
+##### Blog Personal
+- **Descripción:** Blog personal desarrollado con Next.js y Markdown.
+- **Tecnologías utilizadas:** Markdown, Git, Next.js, React.js, JavaScript, HTML, Tailwind CSS.  
+- **Link**: [beresiarte.vercel.app](https://beresiarte.vercel.app)
 
-### **Blog Personal**  
-- **Duración:** Octubre 2022 - Actualidad  
-- **Descripción:** Blog hecho con Next.js, con contenido fácilmente editable gracias al uso de Markdown.  
-- **Tecnologías:**  
-  - Markdown  
-  - Git  
-  - Next.js  
-  - JavaScript  
-  - React.js  
-  - HTML  
-  - Tailwind CSS  
+##### Typing Check   
+- **Descripción:** Test de mecanografía online que mide caracteres por minuto.  
+- **Tecnologías utilizadas:** JavaScript, CSS y más.
+- **Link**: [beresiartejuan.github.io/typing-check](https://beresiartejuan.github.io/typing-check/)
+
+##### Inelco SRL Rediseño  
+- **Descripción:** Proyecto personal para rediseñar la web de Inelco como práctica.  
+- **Tecnologías utilizadas:** CSS, HTML5, React.
+- **Link**: [inelco-clone.vercel.app](https://inelco-clone.vercel.app/)
 
 ---
 
-## Conocimientos y Aptitudes  
-- React  
-- AngularJS  
-- Control de versiones (Git, GitHub)  
-- Bases de datos (SQL, NoSQL)  
-- Más de 20 habilidades adicionales.  
+## Redes sociales
 
 ---
+
+- **GitHub:** [https://github.com/beresiartejuan](https://github.com/beresiartejuan)  
+- **LinkedIn:** [https://linkedin.com/in/beresiartejuan](https://linkedin.com/in/beresiartejuan)  
+- **Email:** [juanberesiarte@gmail.com](https://mailto:juanberesiarte@gmail.com)  
+
+---
+
+import CenteredImage from '../../components/CenteredImage.astro';
+
+<CenteredImage src="/icon-lavender.png" alt="Lavander Icon" />
