--- a/src/content/founder/ezequiel_casiano.mdx
+++ b/src/content/founder/ezequiel_casiano.mdx
@@ -2,7 +2,6 @@
 title: 'Ezequiel Nicolas Casiano'
 description: 'Founder & Helper'
 pubDate: 'Nov 22 2024'
-heroImage: '/founders/carpincho.jpg'
+heroImage: ''
 ---
-
-Hola eze
+fenifnieef
