Edit beresiarte's page

--- a/src/content/founder/juan_beresiarte.mdx
+++ b/src/content/founder/juan_beresiarte.mdx
@@ -6,7 +6,7 @@ heroImage: '/founders/juan_beresiarte.jpeg'
 ---
 
 ## Sobre mí  
-¡Hola! Soy Juan Beresiarte, desarrollador web, escritor y amante del mate 🧉❤️.  
+¡Hola! Soy Juan Beresiarte, desarrollador web, escritor y amante del mate.  
 Actualmente estoy cursando una Tecnicatura en Programación en la Universidad Tecnologica Nacional y trabajo como freelance en distintos proyectos. También administro un blog donde escribo sobre temas de desarrollo.  
 
 **Frase favorita:**  
