Add magali photo

--- a/src/content/founder/magali_rodriguez.mdx
+++ b/src/content/founder/magali_rodriguez.mdx
@@ -2,7 +2,7 @@
 title: 'Magali Rodriguez'
 description: 'Founder & Designer'
 pubDate: 'Nov 22 2024'
-heroImage: '/founders/carpincho.jpg'
+heroImage: '/founders/magali_rodriguez.jpg'
 ---
 
 Escribi algo acá...
