Add valentina photo

--- a/src/content/founder/ezequiel_casiano.mdx
+++ b/src/content/founder/ezequiel_casiano.mdx
@@ -2,6 +2,6 @@
 title: 'Ezequiel Nicolas Casiano'
 description: 'Founder & Helper'
 pubDate: 'Nov 22 2024'
-heroImage: ''
+heroImage: '/founders/ezequiel_casiano.png'
 ---
 fenifnieef
