--- a/src/content/founder/valentina_osorio.mdx
+++ b/src/content/founder/valentina_osorio.mdx
@@ -2,7 +2,7 @@
 title: 'Valentina Osorio'
 description: 'Founder & Designer'
 pubDate: 'Nov 22 2024'
-heroImage: '/founders/carpincho.jpg'
+heroImage: '/founders/valentina_osorio.jpeg'
 ---
 
 Escribi lo que quieras acá...
