--- a/src/content/founder/lautaro_ferreira.mdx
+++ b/src/content/founder/lautaro_ferreira.mdx
@@ -2,7 +2,7 @@
 title: 'Lautaro Ferreira'
 description: 'Founder & Developer'
 pubDate: 'Nov 22 2024'
-heroImage: '/founders/carpincho.jpg'
+heroImage: '/founders/lautaro_ferreira.jpg'
 ---
 
 Escribi lo que quieras acá...
