--- a/src/content/founder/ezequiel_casiano.mdx
+++ b/src/content/founder/ezequiel_casiano.mdx
@@ -1,7 +1,39 @@
 ---
-title: 'Ezequiel Nicolas Casiano'
-description: 'Founder & Helper'
-pubDate: 'Nov 22 2024'
-heroImage: '/founders/ezequiel_casiano.png'
+title: "Ezequiel Nicolas Casiano"
+description: "Founder & Helper"
+pubDate: "Nov 22 2024"
+heroImage: "/founders/ezequiel_casiano.png"
 ---
-fenifnieef
+
+## Sobre mí
+
+¡Hola! Soy Casiano Ezequiel, estudiante de desarrollo de software con enfoque en desarrollo web y Python. Siempre dispuesto a explorar y aprender más.
+
+**Frase favorita**  
+_"Quien no sabe lo que busca, no entiende lo que encuentra"_
+
+## Proyectos Destacados
+
+### Farmago
+
+-   **Descripción:** FarmaGo es una aplicación diseñada para facilitar la vida de cualquier comprador de productos de farmacias.
+-   **Tecnologías:** Python,HTML,CSS,JS
+-   **Link:** https://farmago.onrender.com/
+
+### Blog
+
+-   **Descripción:** Blog de tecnología
+-   **Tecnologías:** Python,HTML,CSS,JS
+-   **Link:** https://blog-yoezequiel.onrender.com/
+
+### Gestor de contraseñas
+
+-   **Descripción:** Aplicación Web para gestionar contraseñas de forma segura.
+-   **Tecnologías:** Python,HTML,CSS,JS
+-   **Link:** https://keycrate.onrender.com/
+
+## Redes Sociales
+
+[![GitHub](https://img.shields.io/badge/github-%23121011.svg?style=for-the-badge&logo=github&logoColor=white)](https://github.com/yoezequiel)
+[![LinkedIn](https://img.shields.io/badge/linkedin-%230077B5.svg?style=for-the-badge&logo=linkedin&logoColor=white)](https://www.linkedin.com/in/yoezequiel/)
+[]()
