Edit beresiarte's page

--- a/src/content/founder/juan_beresiarte.mdx
+++ b/src/content/founder/juan_beresiarte.mdx
@@ -15,9 +15,36 @@ Actualmente estoy cursando una Tecnicatura en Programación en la Universidad Te
 
 ---
 
+## Proyectos destacados
+
+---
+
+##### Blog Personal
+- **Descripción:** Blog personal desarrollado con Next.js y Markdown.
+- **Tecnologías utilizadas:** Markdown, Git, Next.js, React.js, JavaScript, HTML, Tailwind CSS.  
+- **Link**: [beresiarte.vercel.app](https://beresiarte.vercel.app)
+
+##### Typing Check   
+- **Descripción:** Test de mecanografía online que mide caracteres por minuto.  
+- **Tecnologías utilizadas:** JavaScript, CSS y más.
+- **Link**: [beresiartejuan.github.io/typing-check](https://beresiartejuan.github.io/typing-check/)
+
+##### Inelco SRL Rediseño  
+- **Descripción:** Proyecto personal para rediseñar la web de Inelco como práctica.  
+- **Tecnologías utilizadas:** CSS, HTML5, React.
+- **Link**: [inelco-clone.vercel.app](https://inelco-clone.vercel.app/)
+
+---
+
 ## Experiencia
 
 ---
+
+##### CROBF (Fundador)
+- **Rol:** Desarrollador Full Stack
+- **Duración:** Noviembre 2024 - Actualidad  
+- **Ubicación:** Remoto
+- **Habilidades utilizadas:** JavaScript, Astro, ect...
 
 ##### Automóviles Atuel (Contrato temporal)
 - **Rol:** Desarrollador Full Stack  
@@ -44,27 +71,6 @@ Actualmente estoy cursando una Tecnicatura en Programación en la Universidad Te
 ##### Secundaria San Antonio  
 - **Título:** Bachillerato en ciencias humanisticas
 - **Duración:** 2016 - 2021  
-
----
-
-## Proyectos destacados
-
----
-
-##### Blog Personal
-- **Descripción:** Blog personal desarrollado con Next.js y Markdown.
-- **Tecnologías utilizadas:** Markdown, Git, Next.js, React.js, JavaScript, HTML, Tailwind CSS.  
-- **Link**: [beresiarte.vercel.app](https://beresiarte.vercel.app)
-
-##### Typing Check   
-- **Descripción:** Test de mecanografía online que mide caracteres por minuto.  
-- **Tecnologías utilizadas:** JavaScript, CSS y más.
-- **Link**: [beresiartejuan.github.io/typing-check](https://beresiartejuan.github.io/typing-check/)
-
-##### Inelco SRL Rediseño  
-- **Descripción:** Proyecto personal para rediseñar la web de Inelco como práctica.  
-- **Tecnologías utilizadas:** CSS, HTML5, React.
-- **Link**: [inelco-clone.vercel.app](https://inelco-clone.vercel.app/)
 
 ---
 
