--- a/src/content/founder/juan_beresiarte.mdx
+++ b/src/content/founder/juan_beresiarte.mdx
@@ -5,13 +5,20 @@ pubDate: 'Nov 22 2024'
 heroImage: '/founders/juan_beresiarte.jpeg'
 ---
 
-## Sobre mí  
+## Sobre mí
 ¡Hola! Soy Juan Beresiarte, desarrollador web, escritor y amante del mate.  
-Actualmente estoy cursando una Tecnicatura en Programación en la Universidad Tecnologica Nacional y trabajo como freelance en distintos proyectos. También administro un blog donde escribo sobre temas de desarrollo.  
+Actualmente estoy cursando una Tecnicatura en Programación en la Universidad Tecnologica Nacional y trabajo como freelance en distintos proyectos. También administro un blog donde escribo sobre temas de desarrollo.
 
-**Frase favorita:**  
-*"Fallar es humano, rendirse triste"*  
-— Chuty (2017)
+import RandomQuotes from "../../components/RandomQuotes.astro";
+
+<RandomQuotes
+    quotes={[
+        "La constancia y el esfuerzo son los cimientos sobre los que se construyen los grandes logros en la vida.",
+        "Aunque el camino pueda parecer difícil, cada obstáculo superado te acerca más a tus metas.",
+        "Las ideas más grandes suelen comenzar como pequeños sueños; nunca subestimes el poder de empezar."
+    ]}
+    marks={true}
+/>
 
 ---
 
