--- a/src/content/founder/ezequiel_casiano.mdx
+++ b/src/content/founder/ezequiel_casiano.mdx
@@ -4,14 +4,24 @@ description: "Founder & Helper"
 pubDate: "Nov 22 2024"
 heroImage: "/founders/ezequiel_casiano.png"
 ---
+import RandomQuotes from "../../components/RandomQuotes.astro";
 
 ## Sobre mí
 
 ¡Hola! Soy Casiano Ezequiel, estudiante de desarrollo de software con enfoque en desarrollo web y Python. Siempre dispuesto a explorar y aprender más.
 
 **Frase favorita**  
-_"Quien no sabe lo que busca, no entiende lo que encuentra"_
-
+<RandomQuotes 
+    quotes={[
+        "El que no sabe lo que busca, no entiende lo que encuentra",
+        "Quien no vive para servir, no sirve para vivir",
+    ]}
+    marks={true}
+    styles={{
+        "margin-top":"-30px"
+    }}
+/>
+---
 ## Proyectos Destacados
 
 ### Farmago
