replace quote bebe ruth for beresiarte juan

--- a/src/content/blog/Como_Construir_un_Equipo_de_Desarrollo_Altamente_Efectivo.mdx
+++ b/src/content/blog/Como_Construir_un_Equipo_de_Desarrollo_Altamente_Efectivo.mdx
@@ -30,7 +30,7 @@ La comunicación es la columna vertebral de cualquier equipo. Fomentar un ambien
 - Escucha activamente y muestra empatía ante los desafíos individuales.  
 
 <Quote>
-    "La forma en que un equipo juega como un todo determina su éxito. Puedes tener las estrellas más grandes del mundo, pero si no juegan juntas, el club no valdrá un centavo." – Babe Ruth  
+    "El éxito de un equipo depende de cómo jueguen juntos. Puedes tener a las estrellas más brillantes del mundo, pero si no trabajan en conjunto, el equipo no valdrá nada." – Beresiarte Juan
 </Quote>
 
 
