--- a/src/content/founder/magali_rodriguez.mdx
+++ b/src/content/founder/magali_rodriguez.mdx
@@ -4,5 +4,23 @@ description: 'Founder & Designer'
 pubDate: 'Nov 22 2024'
 heroImage: '/founders/magali_rodriguez.jpg'
 ---
+# Sobre Mí
 
-Escribi algo acá...
+Soy una estudiante de desarrollo de software con una gran ambición por mejorar y convertirme en una profesional algún día. Tengo una pasión constante por el aprendizaje y la superación diaria. Mi objetivo es adquirir nuevos conocimientos y habilidades que me permitan crecer en el campo del desarrollo de software. Me esfuerzo por estar al tanto de las últimas tendencias tecnológicas y aplicarlas en proyectos prácticos. Estoy comprometida con mi desarrollo profesional y personal, y busco oportunidades para aprender de cada experiencia.
+
+# Conocimientos
+
+![HTML](ruta_a_la_imagen_html)
+![Python](ruta_a_la_imagen_python)
+![CSS](ruta_a_la_imagen_css)
+![C++](ruta_a_la_imagen_c++)
+
+# Experiencia
+
+He colaborado en varios proyectos, entre los que se destacan:
+
+- **iEstudiar**: Un software educativo elaborado en Python, donde trabajé en la parte del diseño. Este proyecto me permitió aplicar mis conocimientos de diseño y desarrollo, contribuyendo a una herramienta educativa efectiva y funcional.
+- **Hosting**: Un software de gestión de alquileres que actualmente está en desarrollo. Este proyecto me ha brindado la oportunidad de trabajar en la implementación de funcionalidades que facilitan la gestión de propiedades e inquilinos, mejorando la eficiencia y la organización.
+- **Otros Proyectos**: Actualmente estoy involucrada en otros proyectos, que continúan desafiándome y permitiéndome crecer como desarrolladora. Cada proyecto me ofrece nuevas experiencias y la posibilidad de ampliar mis habilidades técnicas.
+
+
