--- a/src/content/founder/magali_rodriguez.mdx
+++ b/src/content/founder/magali_rodriguez.mdx
@@ -10,10 +10,10 @@ Soy una estudiante de desarrollo de software con una gran ambición por mejorar 
 
 # Conocimientos
 
-![HTML](ruta_a_la_imagen_html)
-![Python](ruta_a_la_imagen_python)
-![CSS](ruta_a_la_imagen_css)
-![C++](ruta_a_la_imagen_c++)
+![HTML5](https://img.shields.io/badge/html5-%23E34F26.svg?style=for-the-badge&logo=html5&logoColor=white)
+![Python](https://img.shields.io/badge/python-3670A0?style=for-the-badge&logo=python&logoColor=ffdd54)
+![CSS3](https://img.shields.io/badge/css3-%231572B6.svg?style=for-the-badge&logo=css3&logoColor=white)
+![C++](https://img.shields.io/badge/c++-%2300599C.svg?style=for-the-badge&logo=c%2B%2B&logoColor=white)
 
 # Experiencia
 
