--- a/src/content/founder/magali_rodriguez.mdx
+++ b/src/content/founder/magali_rodriguez.mdx
@@ -15,6 +15,7 @@ Soy una estudiante de desarrollo de software con una gran ambición por mejorar 
 ![CSS3](https://img.shields.io/badge/css3-%231572B6.svg?style=for-the-badge&logo=css3&logoColor=white)
 ![C++](https://img.shields.io/badge/c++-%2300599C.svg?style=for-the-badge&logo=c%2B%2B&logoColor=white)
 ![Figma](https://img.shields.io/badge/figma-%23F24E1E.svg?style=for-the-badge&logo=figma&logoColor=white)
+![Canva](https://img.shields.io/badge/Canva-%2300C4CC.svg?style=for-the-badge&logo=Canva&logoColor=white)
 
 # Estudios
 Técnico superior en Desarrollo de Software
