Fix blog with langs

--- a/src/content/blog/es/Como_Construir_un_Equipo_de_Desarrollo_Altamente_Efectivo.mdx
+++ b/src/content/blog/es/Como_Construir_un_Equipo_de_Desarrollo_Altamente_Efectivo.mdx
@@ -5,7 +5,7 @@ pubDate: 'Nov 26 2024'
 heroImage: '/blog/Como_Construir_un_Equipo_de_Desarrollo_Altamente_Efectivo.jpg'
 ---
 
-import Quote from "../../components/Quote.astro";
+import Quote from "../../../components/Quote.astro";
 
 Un equipo de desarrollo efectivo es el motor detrás de cualquier producto exitoso. La clave no solo está en las habilidades técnicas, sino también en la colaboración, comunicación y cultura que fomentes dentro del grupo. Aquí exploraremos los pilares esenciales para construir un equipo que no solo entregue resultados, sino que disfrute el proceso.  
 
