--- a/src/content/founder/es/ezequiel_casiano.mdx
+++ b/src/content/founder/es/ezequiel_casiano.mdx
@@ -4,7 +4,7 @@ description: "Founder & Helper"
 pubDate: "Nov 22 2024"
 heroImage: "/founders/ezequiel_casiano.png"
 ---
-import RandomQuotes from "../../components/RandomQuotes.astro";
+import RandomQuotes from "../../../components/RandomQuotes.astro";
 
 ## Sobre mí
 
