--- a/src/content/founder/es/juan_beresiarte.mdx
+++ b/src/content/founder/es/juan_beresiarte.mdx
@@ -9,7 +9,7 @@ heroImage: '/founders/juan_beresiarte.jpeg'
 ¡Hola! Soy Juan Beresiarte, desarrollador web, escritor y amante del mate.  
 Actualmente estoy cursando una Tecnicatura en Programación en la Universidad Tecnologica Nacional y trabajo como freelance en distintos proyectos. También administro un blog donde escribo sobre temas de desarrollo.
 
-import RandomQuotes from "../../components/RandomQuotes.astro";
+import RandomQuotes from "../../../components/RandomQuotes.astro";
 
 <RandomQuotes
     quotes={[
@@ -91,6 +91,6 @@ import RandomQuotes from "../../components/RandomQuotes.astro";
 
 ---
 
-import CenteredImage from '../../components/CenteredImage.astro';
+import CenteredImage from '../../../components/CenteredImage.astro';
 
 <CenteredImage src="/icon-lavender.png" alt="Lavander Icon" />
