--- a/src/content/blog/es/Como_Construir_un_Equipo_de_Desarrollo_Altamente_Efectivo.mdx
+++ b/src/content/blog/es/Como_Construir_un_Equipo_de_Desarrollo_Altamente_Efectivo.mdx
@@ -3,6 +3,7 @@ title: '🚀 Cómo Construir un Equipo de Desarrollo Altamente Efectivo'
 description: ''
 pubDate: 'Nov 26 2024'
 heroImage: '/blog/Como_Construir_un_Equipo_de_Desarrollo_Altamente_Efectivo.jpg'
+author: "Casiano Ezequiel"
 ---
 
 import Quote from "../../../components/Quote.astro";
