Change: updated personal description in MDX file

--- a/src/content/founder/es/lautaro_ferreira.mdx
+++ b/src/content/founder/es/lautaro_ferreira.mdx
@@ -1,8 +1,29 @@
 ---
-title: 'Lautaro Ferreira'
+title: 'Lautaro Ferreyra'
 description: 'Founder & Developer'
 pubDate: 'Nov 22 2024'
 heroImage: '/founders/lautaro_ferreira.jpg'
 ---
+## Sobre mí
 
-Escribi lo que quieras acá...
+¡Hola! Soy Lautaro Ferreyra, estudiante de la Tecnicatura Superior en Desarrollo de Software, con un marcado interés en el desarrollo backend y la creación de soluciones tecnológicas robustas. Me apasiona el aprendizaje continuo y disfruto enfrentar desafíos que pongan a prueba mis habilidades técnicas mientras busco soluciones eficientes y creativas. Soy una persona curiosa, metódica y dedicada, siempre en busca de nuevas oportunidades para crecer profesional y personalmente.
+
+### Conocimientos
+
+![HTML5](https://img.shields.io/badge/html5-%23E34F26.svg?style=for-the-badge&logo=html5&logoColor=white)  
+![CSS3](https://img.shields.io/badge/css3-%231572B6.svg?style=for-the-badge&logo=css3&logoColor=white)  
+![JavaScript](https://img.shields.io/badge/javascript-%23323330.svg?style=for-the-badge&logo=javascript&logoColor=%23F7DF1E)  
+![Python](https://img.shields.io/badge/python-3670A0?style=for-the-badge&logo=python&logoColor=ffdd54)  
+![Flask](https://img.shields.io/badge/flask-%23000.svg?style=for-the-badge&logo=flask&logoColor=white)  
+![MySQL](https://img.shields.io/badge/mysql-%2300f.svg?style=for-the-badge&logo=mysql&logoColor=white)  
+![Tkinter](https://img.shields.io/badge/tkinter-%23007ACC.svg?style=for-the-badge&logo=python&logoColor=white)  
+![Pygame](https://img.shields.io/badge/pygame-%23FFCC00.svg?style=for-the-badge&logo=python&logoColor=white)  
+![NumPy](https://img.shields.io/badge/numpy-%23013243.svg?style=for-the-badge&logo=numpy&logoColor=white)  
+![Pandas](https://img.shields.io/badge/pandas-%23150458.svg?style=for-the-badge&logo=pandas&logoColor=white)  
+![Matplotlib](https://img.shields.io/badge/matplotlib-%23ffffff.svg?style=for-the-badge&logo=python&logoColor=black)  
+![Scikit-Learn](https://img.shields.io/badge/scikit--learn-%23F7931E.svg?style=for-the-badge&logo=scikit-learn&logoColor=white)  
+
+### Conecta conmigo
+
+- **[GitHub](https://github.com/lautaroff)**  
+- **[LinkedIn](https://www.linkedin.com/in/lautaro-francisco-ferreyra-217743244/)**
