--- a/src/content/founder/es/valentina_osorio.mdx
+++ b/src/content/founder/es/valentina_osorio.mdx
@@ -5,4 +5,31 @@ pubDate: 'Nov 22 2024'
 heroImage: '/founders/valentina_osorio.jpeg'
 ---
 
-Escribi lo que quieras acá...
+# SOBRE MÍ
+
+Soy una estudiante de programación de software con una marcada preferencia por el diseño de páginas web. Además de mi interés en los negocios y el diseño gráfico, me considero una persona positiva, responsable y educada en todos los ámbitos sociales. Me apasiona aprender cosas nuevas e innovar, manteniéndome siempre actualizada con los últimos avances en tecnología y diseño. Mi objetivo es combinar mis habilidades técnicas y creativas para desarrollar soluciones digitales visualmente atractivas y funcionales.
+
+# ESTUDIOS
+
+- las aplicaciones de Microsoft Office, incluyendo Word, Excel, PowerPoint, Outlook y Access.
+- Bachiller técnico en Programación de Software.
+
+# EXPERIENCIAS
+
+He tenido la oportunidad de trabajar en algunos proyectos de desarrollo de los cuales son: 
+
+- **iEstudiar**: Un software educativo elaborado en Python, donde trabajé en la parte del diseño. Este proyecto me permitió aplicar mis conocimientos de diseño y desarrollo, contribuyendo a una herramienta educativa efectiva y funcional.
+- **Hosting**: Un software de gestión de alquileres que actualmente está en desarrollo. Este proyecto me ha brindado la oportunidad de trabajar en la implementación de funcionalidades que facilitan la gestión de propiedades e inquilinos, mejorando la eficiencia y la organización.
+- **Otros Proyectos**: Actualmente estoy involucrada en otros proyectos, que continúan desafiándome y permitiéndome crecer como desarrolladora. Cada proyecto me ofrece nuevas experiencias y la posibilidad de ampliar mis habilidades técnicas.
+
+# CONOCIMIENTOS 
+
+![HTML5](https://img.shields.io/badge/html5-%23E34F26.svg?style=for-the-badge&logo=html5&logoColor=white)
+![Python](https://img.shields.io/badge/python-3670A0?style=for-the-badge&logo=python&logoColor=ffdd54)
+![CSS3](https://img.shields.io/badge/css3-%231572B6.svg?style=for-the-badge&logo=css3&logoColor=white)
+![C++](https://img.shields.io/badge/c++-%2300599C.svg?style=for-the-badge&logo=c%2B%2B&logoColor=white)
+![Figma](https://img.shields.io/badge/figma-%23F24E1E.svg?style=for-the-badge&logo=figma&logoColor=white)
+![Canva](https://img.shields.io/badge/Canva-%2300C4CC.svg?style=for-the-badge&logo=Canva&logoColor=white)
+![Adobe Photoshop](https://img.shields.io/badge/adobe%20photoshop-%2331A8FF.svg?style=for-the-badge&logo=adobe%20photoshop&logoColor=white)
+![MySQL](https://img.shields.io/badge/mysql-4479A1.svg?style=for-the-badge&logo=mysql&logoColor=white)
+![Adobe Illustrator](https://img.shields.io/badge/adobe%20illustrator-%23FF9A00.svg?style=for-the-badge&logo=adobe%20illustrator&logoColor=white)
