--- a/src/content/founder/es/ezequiel_casiano.mdx
+++ b/src/content/founder/es/ezequiel_casiano.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Ezequiel Nicolas Casiano"
-description: "Founder & Helper"
+description: "Founder"
 pubDate: "Nov 22 2024"
 heroImage: "/founders/ezequiel_casiano.png"
 ---
