fix title in last article

--- a/src/content/blog/es/Resolviendo_conflictos_en_equipos de desarrollo_estrategias_y_ejemplos.mdx
+++ b/src/content/blog/es/Resolviendo_conflictos_en_equipos de desarrollo_estrategias_y_ejemplos.mdx
@@ -1,12 +1,10 @@
 ---
-title: 'Las Mejores Herramientas para la Comunicación en Equipos Distribuidos'
+title: 'Resolviendo conflictos en equipos de desarrollo: estrategias y ejemplos'
 description: ''
 pubDate: 'Dec 12 2024'
 heroImage: '/blog/Resolviendo_conflictos_en_equipos_de_desarrollo_estrategias_y_ejemplos.jpg'
 author: 'Casiano Ezequiel'
 ---
-# Resolviendo conflictos en equipos de desarrollo: estrategias y ejemplos 🤝💻
-
 Los conflictos son inevitables cuando trabajamos en equipos de desarrollo de software. Las diferencias de opiniones, prioridades o estilos de trabajo pueden dar lugar a tensiones. Sin embargo, si se manejan adecuadamente, los conflictos pueden convertirse en oportunidades para fortalecer la colaboración y mejorar los resultados del equipo. En esta entrada, exploraremos estrategias prácticas y ejemplos para resolver conflictos en equipos de desarrollo. ¡Vamos a desglosarlo! 🚀
 
 ---
