--- a/src/content/blog/en/How_to_Build_a_Highly_Effective_Development_Team.mdx
+++ b/src/content/blog/en/How_to_Build_a_Highly_Effective_Development_Team.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'How to Build a Highly Effective Development Team''
+title: 'How to Build a Highly Effective Development Team'
 description: ''
 pubDate: 'Nov 26 2024'
 heroImage: '/blog/Como_Construir_un_Equipo_de_Desarrollo_Altamente_Efectivo.jpg'
