Fix metadata in blog

--- a/src/content/blog/es/5_funciones_de_css_que_deberías_conocer.mdx
+++ b/src/content/blog/es/5_funciones_de_css_que_deberías_conocer.mdx
@@ -1,3 +1,10 @@
+---
+title: '5 funciones de css que deberías conocer'
+description: ''
+pubDate: 'Dic 26 2024'
+heroImage: '/blog/5_funciones_de_css_que_deberias_conocer.png'
+author: "Juan Beresiarte"
+---
 Hoy quiero hablarte de cinco funciones geniales de CSS que probablemente cambiarán tu manera de escribir estilos. Si estás aprendiendo CSS, estas funciones te van a facilitar la vida. Vamos a verlas una por una, con ejemplos que muestran cómo haríamos las cosas "a mano" y cómo podemos simplificarlas con estas herramientas.
 
 ## 1. calc(): Realiza cálculos directamente en tu CSS ​​📏
