Try to fix this shit

--- a/src/content/blog/es/La_ruta_perfecta_para_aprender_a_programar.mdx
+++ b/src/content/blog/es/La_ruta_perfecta_para_aprender_a_programar.mdx
@@ -5,7 +5,8 @@ pubDate: 'Feb 18 2025'
 heroImage: ''
 author: "Ana Paula Toledo"
 ---
-import YoutubeVideo from '../../../components/YoutubeVideo.astro'
+
+
 
 Existen millones de consejos en internet para aprender a programar, pero ¿por qué este texto es diferente? Porque viene de la mano de recursos e ideas que te van a facilitar el camino para aprender a programar de manera autodidacta. 
 
@@ -15,7 +16,7 @@ Mi nombre es **Ana** y soy parte de **CROBF** una empresa de desarrollo de softw
 
 ## Variables, Loops y Café: Una Guía para Principiantes
 
-### Paso 1: Entendiendo que es la programación y su lógica.
+#### Paso 1: Entendiendo que es la programación y su lógica.
 
 ¿Alguna vez te has preguntado qué es la programación? Yo sí, muchas veces, y al fin encontré una respuesta sencilla: la programación es darle instrucciones a una computadora para que realice una acción específica. ¿Dirías que es fácil, no?
 
@@ -25,13 +26,13 @@ Este concepto significa dar instrucciones claras y en orden para que la computad
 
 Para que lo entiendas mejor te dejo un video de Luisina "La Inge" creadora del canal de YouTube "TodoCode" donde explica en dos minutos la importancia de aprender la lógica de programación:
 
-<YoutubeVideo youtubeIdVideo="wq_Tz96Nbbg"/>
+[Lógica de Programación - TodoCode](https://youtu.be/wq_Tz96Nbbg?si=SJOEw9M10Yarn4_O)
 
 Para poder empezar a estudiar este tema te dejo un link a la lista de reproducción de videos que TodoCode tiene para ayudarte a aprender:
 
-<YoutubeVideo youtubeIdVideo="videoseries?si=wnkG4fzcaVJ93zeu&amp;list=PLQxX2eiEaqbzRVxjkstjLmmn9enb0x3zi"/>
+[Aprendiendo la Lógica de Programación - TodoCode](https://youtube.com/playlist?list=PLQxX2eiEaqbzRVxjkstjLmmn9enb0x3zi&si=PN5iXrHz2enIG6mh)
 
-### Paso 2: Elegir el lenguaje de programación.
+#### Paso 2: Elegir el lenguaje de programación.
 
 Al terminar el curso de lógica de programación, llega uno de los momentos más importantes: **elegir qué lenguaje aprender**.
 
@@ -39,17 +40,17 @@ Hay muchas opciones, pero nuestro consejo es que elijas un lenguaje con una buen
 
 Uno de los mejores lenguajes para entrar en este mundo y el más elegido es **Python** ya que ofrece una curva de aprendizaje ideal para principiantes debido a su sintaxis sencilla y fácil de entender. 
 
-#### Recursos para Aprender Python
+##### Recursos para Aprender Python
 
 **Curso de Python** impartido por el YouTuber **MoureDev**
 
-![Curso de PYTHON Desde Cero](https://youtube.com/playlist?list=PLNdFk2_brsRdgQXLIlKBXQDeRf3qvXVU_&si=1N9W8udOOFUwa2IH)
+[Curso de PYTHON Desde Cero](https://youtube.com/playlist?list=PLNdFk2_brsRdgQXLIlKBXQDeRf3qvXVU_&si=1N9W8udOOFUwa2IH)
 
 **Moure** es un profesional con más de 20 años de experiencia en el desarrollo de software. Ha trabajado en diferentes áreas y actualmente brinda recursos a estudiantes de todo el mundo a traves de su canal de YouTube y su repositorio de GitHub. 
 
 **Curso de Python** impartido por **Lucas Dalto** creador del canal de Youtube **SoyDalto**
 
-![Curso de PYTHON Desde Cero](https://youtu.be/nKPbfIU442g?si=RVverrLy-WJ6J-8m)
+[Curso de PYTHON Desde Cero](https://youtu.be/nKPbfIU442g?si=RVverrLy-WJ6J-8m)
 
 Dalto es un programador que sabe enseñar, algo poco común en el mundo de la programación, donde la parte técnica suele alejarse de la pedagógica. Sin embargo, su capacidad para sintetizar conceptos y su habilidad en la edición de videos han permitido que miles de personas aprendan a programar mientras se divierten.
 
@@ -60,7 +61,7 @@ Sí, todo buen programador necesita leer documentación para profundizar en los 
 Documentación **oficial** de Python:
 [Nuestra Documentación | Python.org](https://www.python.org/doc/)
 
-Otros recursos:
+##### Otros recursos:
 
 Estos links te van a llevar a un tutorial para aprender Python que podés utilizar como complemento de la documentación y también a los retos de programación creados por Moure para que puedas practicar y pulir tu habilidad para programar. 
 
@@ -68,7 +69,7 @@ Estos links te van a llevar a un tutorial para aprender Python que podés utiliz
 
 [Retos de Programación | by MoureDev](https://retosdeprogramacion.com/)
 
-Paso 3: Mejor Hecho que Perfecto. 
+#### Paso 3: Mejor Hecho que Perfecto. 
 
 Aprender a programar puede ser un proceso difícil. Nuestra mente, acostumbrada a lo instantáneo, querrá aprender todo de inmediato, pero eso es imposible.
 
@@ -82,5 +83,5 @@ Por último, queremos que sepas que a veces la motivación y las ganas no están
 
 Esperamos que este artículo te sea útil. Gracias por leer el blog de **CROBF**.
 
-¡Éxitos en tu camino de aprendizaje!
+**¡Éxitos en tu camino de aprendizaje!**
 
