--- a/src/content/blog/es/La_ruta_perfecta_para_aprender_a_programar.mdx
+++ b/src/content/blog/es/La_ruta_perfecta_para_aprender_a_programar.mdx
@@ -6,7 +6,7 @@ heroImage: ''
 author: "Ana Paula Toledo"
 ---
 
-
+import YoutubeVideo from '../../../components/YoutubeVideo.astro'
 
 Existen millones de consejos en internet para aprender a programar, pero ¿por qué este texto es diferente? Porque viene de la mano de recursos e ideas que te van a facilitar el camino para aprender a programar de manera autodidacta. 
 
@@ -26,11 +26,12 @@ Este concepto significa dar instrucciones claras y en orden para que la computad
 
 Para que lo entiendas mejor te dejo un video de Luisina "La Inge" creadora del canal de YouTube "TodoCode" donde explica en dos minutos la importancia de aprender la lógica de programación:
 
-[Lógica de Programación - TodoCode](https://youtu.be/wq_Tz96Nbbg?si=SJOEw9M10Yarn4_O)
+
+<YoutubeVideo youtubeIdVideo="wq_Tz96Nbbg"/>
 
 Para poder empezar a estudiar este tema te dejo un link a la lista de reproducción de videos que TodoCode tiene para ayudarte a aprender:
 
-[Aprendiendo la Lógica de Programación - TodoCode](https://youtube.com/playlist?list=PLQxX2eiEaqbzRVxjkstjLmmn9enb0x3zi&si=PN5iXrHz2enIG6mh)
+<YoutubeVideo youtubeIdVideo="videoseries?si=KSu97e30-MH0Mn4i&amp;list=PLQxX2eiEaqbzRVxjkstjLmmn9enb0x3zi"/>
 
 #### Paso 2: Elegir el lenguaje de programación.
 
