modified: titles, links and add image

--- a/src/content/blog/es/La_ruta_perfecta_para_aprender_a_programar.mdx
+++ b/src/content/blog/es/La_ruta_perfecta_para_aprender_a_programar.mdx
@@ -2,7 +2,7 @@
 title: 'La Ruta Perfecta Para Aprender a Programar'
 description: 'Una pequeña guía para ayudarte a dar tus primeros pasos en la programación.'
 pubDate: 'Feb 18 2025'
-heroImage: '../../../public/blog/aprendiendoconeleze.jpg'
+heroImage: 'blog/La-ruta-perfecta-para-aprender-a-programar.jpg'
 author: "Ana Paula Toledo"
 ---
 
@@ -45,13 +45,13 @@ Uno de los mejores lenguajes para entrar en este mundo y el más elegido es **Py
 
 **Curso de Python** impartido por el YouTuber **MoureDev**
 
-[Curso de PYTHON Desde Cero](https://youtube.com/playlist?list=PLNdFk2_brsRdgQXLIlKBXQDeRf3qvXVU_&si=1N9W8udOOFUwa2IH)
+<YoutubeVideo youtubeIdVideo="videoseries?si=SFZN4BhD-Ut7whV7&amp;list=PLNdFk2_brsRdgQXLIlKBXQDeRf3qvXVU_"/>
 
 **Moure** es un profesional con más de 20 años de experiencia en el desarrollo de software. Ha trabajado en diferentes áreas y actualmente brinda recursos a estudiantes de todo el mundo a traves de su canal de YouTube y su repositorio de GitHub. 
 
 **Curso de Python** impartido por **Lucas Dalto** creador del canal de Youtube **SoyDalto**
 
-[Curso de PYTHON Desde Cero](https://youtu.be/nKPbfIU442g?si=RVverrLy-WJ6J-8m)
+<YoutubeVideo youtubeIdVideo="nKPbfIU442g?si=A4hRSpiJkIGfkzGq"/>
 
 Dalto es un programador que sabe enseñar, algo poco común en el mundo de la programación, donde la parte técnica suele alejarse de la pedagógica. Sin embargo, su capacidad para sintetizar conceptos y su habilidad en la edición de videos han permitido que miles de personas aprendan a programar mientras se divierten.
 
