fix last article

--- a/src/content/blog/es/Dia_internacional_de_la_mujer.mdx
+++ b/src/content/blog/es/Dia_internacional_de_la_mujer.mdx
@@ -1,4 +1,3 @@
-
 ---
 title: 'Día Internacional de La Mujer'
 description: ''
@@ -6,7 +5,8 @@ pubDate: 'Mar 8 2025'
 heroImage: '/blog/Dia_internacional_de_la_mujer.png'
 author: "Ana Paula Toledo"
 ---
-# **Día Internacional de La Mujer**
+
+import YoutubeVideo from '../../../components/YoutubeVideo.astro'
 
 El 8 de Marzo se conmemora el **Día Internacional de La Mujer** pero ¿Sabes por qué?
 
