add ana res to article

--- a/src/content/blog/es/Dia_internacional_de_la_mujer.mdx
+++ b/src/content/blog/es/Dia_internacional_de_la_mujer.mdx
@@ -48,16 +48,23 @@ Para conocer más sobre la experiencia de las mujeres en el mundo tecnológico h
 _"**Sofi**: Desde pequeña, siempre me gustó usar la computadora de mi papá. Al principio, la usaba para jugar al Need for Speed Most Wanted o al FlatOut 2 pero con el tiempo descubrí el programa Scratch y empecé a crear juegos pequeños. En ese momento, no sabía exactamente qué estaba haciendo ni que tenía algo que ver con programación, pero me encantaba la idea de crear algo desde cero. Más tarde, me enteré de que existía una carrera relacionada con eso, y supe que era lo mío. Mi curiosidad y esa sensación de poder crear cosas nuevas fueron lo que me motivaron a entrar en el mundo tecnológico."_
 
 _"**Juli**: Desde niña me resultan llamativos los avances tecnológicos, como también el ritmo en el que todo incrementa. Por lo qué me hace mucha ilusión el hecho de poder llegar a ser parte de ello."_
-
+_"**Ana**:Desde muy chica empecé a programar usando Scratch, sin siquiera saber qué significaba ninguna de las dos cosas. Cuando elegí la secundaria a la que iba a ir y fue una técnica, la parte que más me interesaba era la que tenía que ver con programar, con darle instrucciones a una máquina o a un Arduino o también a un PLC. 
+Entonces busqué una carrera que me permitiera seguir creciendo en ese rubro y encontré en el camino el Desarrollo de Software."_
 🔹 **¿Qué es lo que más te gusta de trabajar en tecnología?**  
 _"**Sofi**: Lo que más me gusta es la posibilidad de crear soluciones innovadoras y ver cómo mis ideas se convierten en algo real y útil. Me encanta que la tecnología esté en constante evolución, lo que me permite aprender cosas nuevas todo el tiempo. También disfruto mucho trabajar en equipo, colaborar con otras personas y resolver problemas juntos. Para mí, la tecnología es un espacio donde la creatividad y la lógica se unen, y eso es algo que me apasiona."_
 
 _"**Juli**: Es increíble que no siempre es un único camino el de crear, encontrar o mejorar soluciones, programas, etc. Poder llegar a la efectividad solo fluyendo me encanta.."_
 
+_"**Ana**: Particularmente de mi carrera, lo que más me gusta son los desafíos, porque son interminables. Todo el tiempo hay algo nuevo por aprender, por saber o conocer. Eso me da la posibilidad de seguir ampliando mis horizontes de conocimiento pero también de pensamiento; la tecnología es un mundo que te enseña muchas cosas para la vida, desde el hecho de seguir intentando hasta que funcione e incluso la importancia de los pequeños detalles que marcan una gran diferencia en un trabajo. "_
+
 🔹 **¿Qué mensaje le darías a otras mujeres que quieren empezar en este campo?**  
 _"**Sofi**: Les diría que  se animen a dar el paso. El mundo de la tecnología es enorme y hay muchas áreas en las que pueden especializarse, desde programación y diseño hasta inteligencia artificial, ciberseguridad o robótica. No tengan miedo de explorar y probar cosas nuevas. Si sienten curiosidad por algo, ¡adelante! Lo más importante es que confíen en sus habilidades y sepan que tienen mucho que aportar. La tecnología necesita más voces diversas, y ustedes pueden ser parte de ese cambio.."_
 
 _"**Juli**: Debemos animarnos como mujeres y unirnos, el mundo de la tecnología está abierto para todos y con muchas personas a mano para ayudarnos, podemos crecer innovando juntas."_
+
+_"**Ana**: Que si no saben a qué se quieren dedicar, aprendan a programar. Si no es lo que les gusta al menos se van a llevar una herramienta que siempre les va a ser útil, ya sea por el hecho de usar el conocimiento en un programa o para aprender a analizar, cuestionar y materializar ideas de manera sencilla. 
+Por otra parte, que sepan que sí, al principio da miedo, es un mundo lleno de sorpresas y de montañas que al principio parecen imposibles de escalar. Sin embargo hay una red de personas que se encargan de volver todo el proceso más fácil: compañeros, maestros, especialistas, etc. Miles de personas que han brindado su granito de arena para que hoy muchas mujeres tengan acceso a contenido educativo de calidad, que les permita formarse y capacitarse; como es el caso de HexaDevs, la academia de CROBF que se lanzó ayer al público y en la cual confío plenamente como herramienta de aprendizaje para todos. 
+Y por último que no cuestionen su valor en esta industria, que seguimos necesitando más mujeres que se dediquen a la tecnología y trabajen en conjunto con otras mujeres para seguir creando herramientas que transformen este mundo en un mejor lugar para todos."_
 
 ### **Sigamos abriendo camino**
 
