change: lautaro_ferreyra.mdx

--- a/src/content/founder/es/lautaro_ferreyra.mdx
+++ b/src/content/founder/es/lautaro_ferreyra.mdx
@@ -2,7 +2,7 @@
 title: 'Lautaro Ferreyra'
 description: 'Founder & Developer'
 pubDate: 'Nov 22 2024'
-heroImage: '/founders/lautaro_ferreira.jpg'
+heroImage: '/founders/lautaro_ferreyra.jpeg'
 ---
 ## Sobre mí
 
