Restructures project to separate blog into independent repository
Removes blog content and functionality from main website, transitioning to a standalone blog project structure. Updates documentation to reflect new dual-project architecture with separate deployment configurations.

Key changes:
- Removes all blog posts, layouts, and related content collection
- Updates navigation to link to external blog at blog.crobf.tech
- Removes blog-related routes, RSS feeds, and pagination
- Updates site configuration to use crobf.tech domain
- Enhances README with installation instructions and deployment details for both projects
- Deletes blog images from public directory

This separation improves maintainability by allowing independent development and deployment of website and blog components.

--- a/src/content/founder/en/juan_beresiarte.mdx
+++ b/src/content/founder/en/juan_beresiarte.mdx
@@ -29,7 +29,7 @@ import RandomQuotes from "../../../components/RandomQuotes.astro";
 ##### Personal Blog
 - **Description:** Personal blog built with Next.js and Markdown.
 - **Technologies used:** Markdown, Git, Next.js, React.js, JavaScript, HTML, Tailwind CSS.  
-- **Link:** [beresiarte.vercel.app](https://beresiarte.vercel.app)
+- **Link:** [beresiarte.tech](https://beresiarte.tech)
 
 ##### Typing Check   
 - **Description:** An online typing test that measures characters per minute.  
@@ -39,7 +39,7 @@ import RandomQuotes from "../../../components/RandomQuotes.astro";
 ##### Inelco SRL Redesign  
 - **Description:** Personal project to redesign Inelco's website as practice.  
 - **Technologies used:** CSS, HTML5, React.  
-- **Link:** [inelco-clone.vercel.app](https://inelco-clone.vercel.app/)
+- **Link:** [inelco-clone.tech](https://inelco-clone.tech/)
 
 ---
 
