--- a/src/content/founder/es/juan_beresiarte.mdx
+++ b/src/content/founder/es/juan_beresiarte.mdx
@@ -18,7 +18,7 @@ Actualmente estoy cursando una Tecnicatura en Programación en la Universidad Te
 ##### Blog Personal
 - **Descripción:** Blog personal desarrollado con Next.js y Markdown.
 - **Tecnologías utilizadas:** Markdown, Git, Next.js, React.js, JavaScript, HTML, Tailwind CSS.  
-- **Link**: [beresiarte.vercel.app](https://beresiarte.vercel.app)
+- **Link**: [beresiarte.tech](https://beresiarte.tech)
 
 ##### Typing Check   
 - **Descripción:** Test de mecanografía online que mide caracteres por minuto.  
@@ -28,7 +28,7 @@ Actualmente estoy cursando una Tecnicatura en Programación en la Universidad Te
 ##### Inelco SRL Rediseño  
 - **Descripción:** Proyecto personal para rediseñar la web de Inelco como práctica.  
 - **Tecnologías utilizadas:** CSS, HTML5, React.
-- **Link**: [inelco-clone.vercel.app](https://inelco-clone.vercel.app/)
+- **Link**: [inelco-clone.tech](https://inelco-clone.tech/)
 
 ---
 
