--- a/src/content/founder/en/ezequiel_casiano.mdx
+++ b/src/content/founder/en/ezequiel_casiano.mdx
@@ -8,13 +8,12 @@ import RandomQuotes from "../../../components/RandomQuotes.astro";
 
 ## About Me
 
-Hi! I'm Casiano Ezequiel, a software development student focused on web development and Python. Always eager to explore and learn more.
+Hi! I'm Casiano Ezequiel, As a leader, I turn ideas into high‑impact products: I define the vision and roadmap, prioritize by value, and coordinate cross‑functional teams to deliver scalable, measurable solutions. I lead strategy and technical execution — from prototypes and MVPs to production architectures — backed by experience in frontend, backend, infrastructure, and CI/CD (React, Astro, Node/Express, Python/Flask, AWS/GCP, Docker). I make decisions based on metrics and the voice of the user to reduce risk, accelerate time‑to‑market, and maximize adoption.
 
 **Favorite Quote**  
 <RandomQuotes 
     quotes={[
         "He who doesn't know what he's looking for won't understand what he finds",
-        "Those who don't live to serve, don't deserve to live",
     ]}
     marks={true}
     styles={{
@@ -22,25 +21,6 @@ Hi! I'm Casiano Ezequiel, a software development student focused on web developm
     }}
 />
 ---
-## Featured Projects
-
-### FarmaGo
-
--   **Description:** FarmaGo is an application designed to make life easier for anyone purchasing pharmacy products.
--   **Technologies:** Python, HTML, CSS, JS
--   **Link:** https://farmago.onrender.com/
-
-### Blog
-
--   **Description:** Technology Blog
--   **Technologies:** Python, HTML, CSS, JS
--   **Link:** https://blog-yoezequiel.onrender.com/
-
-### Password Manager
-
--   **Description:** Web application to securely manage passwords.
--   **Technologies:** Python, HTML, CSS, JS
--   **Link:** https://keycrate.onrender.com/
 
 ## Social Media
 
