--- a/src/content/founder/es/ezequiel_casiano.mdx
+++ b/src/content/founder/es/ezequiel_casiano.mdx
@@ -8,39 +8,19 @@ import RandomQuotes from "../../../components/RandomQuotes.astro";
 
 ## Sobre mí
 
-¡Hola! Soy Casiano Ezequiel, estudiante de desarrollo de software con enfoque en desarrollo web y Python. Siempre dispuesto a explorar y aprender más.
+¡Hola! Soy Casiano Ezequiel, Como líder, convierto ideas en productos de alto impacto: defino la visión y el roadmap, priorizo por valor y coordino equipos cross‑funcionales para entregar soluciones escalables y medibles. Lidero la estrategia y la ejecución técnica —desde prototipos y MVPs hasta arquitecturas en producción— apoyado en experiencia en frontend, backend, infraestructura y CI/CD (React, Astro, Node/Express, Python/Flask, AWS/GCP, Docker). Tomo decisiones basadas en métricas y en la voz del usuario para reducir riesgos, acelerar el time‑to‑market y maximizar adopción.
 
 **Frase favorita**  
 <RandomQuotes 
     quotes={[
         "El que no sabe lo que busca, no entiende lo que encuentra",
-        "Quien no vive para servir, no sirve para vivir",
-    ]}
+        ]}
     marks={true}
     styles={{
         "margin-top":"-30px"
     }}
 />
 ---
-## Proyectos Destacados
-
-### Farmago
-
--   **Descripción:** FarmaGo es una aplicación diseñada para facilitar la vida de cualquier comprador de productos de farmacias.
--   **Tecnologías:** Python,HTML,CSS,JS
--   **Link:** https://farmago.onrender.com/
-
-### Blog
-
--   **Descripción:** Blog de tecnología
--   **Tecnologías:** Python,HTML,CSS,JS
--   **Link:** https://blog-yoezequiel.onrender.com/
-
-### Gestor de contraseñas
-
--   **Descripción:** Aplicación Web para gestionar contraseñas de forma segura.
--   **Tecnologías:** Python,HTML,CSS,JS
--   **Link:** https://keycrate.onrender.com/
 
 ## Redes Sociales
 
